<resources>
    <string name="app_name">LatihanLayout</string>
    <string name="tv_formulir">Formulir</string>
    <string name="txt_nama_depan">Nama Depan</string>
    <string name="txt_nama_belakang">Nama belakang</string>
    <string name="txt_alamat_email">Alamat Email</string>
    <string name="txt_nomor_telepon">Nomor Telepon</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_confirm">Konfirm Passowrd</string>
    <string name="txt_proses">Proses</string>
    <string name="txt_judul_title">Judul</string>
    <string name="Content">"Yesterday was too good to be Monday.
        \nBut today isn't a good day.
        \nAnd tomorrow, I hope that it'll be okay.
        \nMy heart was beating so fast yet my hands were cold.
        \n\"I won't come back for a long time\" that's what you told me.
        \nAnd my mind was full of recollections from our brief moment in that day that flashed out like a frightening lightning bolt
        \nSo, this is huh, well I guess I'll simply wait for you here till you'll come back here, but will you?
        \nI know I had a dream to be with you, though I don't think that I am worthy of that and now, will it still become true?
        \n\"Get up! You have to make it come true, for you have yet a long way to go!\" That's what Homie told me to do.
        \nRight! I wish that you'd be someone that could be by my side, someone who asks me dumb questions then we'd laugh together, and someone to stay up late at night with, talking about stars and their yellowish glow in the night sky.
        \nI'm gonna make my way up and made myself worthy to be by your side.
        \nSo until the days when we made our story together finally came to reality, I want you to be part of my story as the days go by.
        \nAs time goes on, the days go by.
        \nI glimpse Mr sun, hiding in the shadows of the dark clouds, yet I can feel his warmth.
        \nLike my days that went cloudy, yet I still long my hope for you.
        \nHow's there? I asked you
        \n\"Great, the sun is bright yellow, and the sky is blue,\" you told me.
        \n\"Then hold my hands tight don't you let go, for I yet want to be here with you,\" I said on the line.
        \n\"What has gotten into you silly boy,\" she said with a smile in her voice.
        \nI don't know, I guess I'm just lonely for you won't be here for a long time,  or possibly forever.
        \nWell then, simply come here when the time has come.  "</string>
</resources>