<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/tv_formulir"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nama_depan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nama_depan"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/edt_alamat_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_alamat_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.332" />

    <EditText
        android:id="@+id/edt_nomor_telepon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nomor_telepon"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.457" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.589" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password_confirm"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.706" />

    <EditText
        android:id="@+id/edt_nama_belakang"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nama_belakang"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:layout_width="216dp"
        android:layout_height="59dp"
        android:layout_marginBottom="76dp"
        android:text="@string/txt_proses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>